add jvm args to supress runtime warnings until the root causes are fixed in kafka client resp. protobuf